# bmatrix

./: .hgignore  README.md  README.rst  pyproject.toml  setup.py
bmatrix/: __init__.py  bmatrix_cart.py  datastruct.py  inputparser.py  intcoord.py  physconstants.py  various.py
docs/: Makefile  make.bat
docs/source/: conf.py  eigen_hess_anharm_int.rst  eigen_opt.rst  index.rst  thermo.rst  writeBmat.rst
example/: INPDAT  POSCAR  bmat.dat.orig  xxx  yyy2
tests/: test_internals_bmat.py
tests/data/: hafi-isobu.xyz  hafi-isobu_internals.npy  hton.xyz  hton_bmatrix.npy  hton_internals.npy  meoh.xyz  meoh_bmatrix.npy  meoh_internals.npy
writeBmat/: __init__.py  bmatrix.py  bmatrix_cart.py  datastruct.py  dealxyz.py  inputparser.py  intcoord.py  intcoord.py_old  mymath.py  physconstants.py  readandwrite.py  takeinp.py  takeinpPOSCAR.py  various.py  writeBmat.py
writeBmat/example/: POSCAR  check.ce
writeBmat/writeBmat_new_version/: bmat.dat_b  bmatrix.py  bmatrix_cart.py  check.ce  inputer.py  intcoord.py  takeinpPOSCAR.py  various.py  writeBmat.py
writeBmat/writeBmat_old_version/: datastruct.py  takeinpPOSCAR.py  writeBmat.py
