[tool.poetry]
name = "writebmat"
version = "1.0.1"
description = "his package contains tools for generating internal coordiantes and the"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.1"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
bump2version = "^1.0.0"
pylint = "^2.5.3"
pytest = "^3.0"
pytest-cov = "^2.4"
pytest-sugar = "^0.9.4"


[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
